Complete header with non-functional Navbar and logo design.
1) Designed and placed the logo on the webpage.
2)Added the Navbar component to the header, though it is not yet functional.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
   <body>
     <!--=============== Header Section ==========-->
     <header>
+      <nav>
+        <div class="row">
+          <img class="logo" src="resources/images/logo.png" alt="logo-img" />
+        <ul class="main-nav">
+          <li><a href="#">Food delivery</a></li>
+          <li><a href="#">How it works ?</a></li>
+          <li><a href="#">Our cities</a></li>
+          <li><a href="#">Sign-up</a></li>
+        </ul>
+      </nav>
+    </div>
       <div class="hero-text-box">
         <h1>Goodbye junk food <br />Hello super healthy food</h1>
         <a class="btn btn-full" href="#">I'm Hungry</a>
