Complete feature section with feature icons
1) Added features icons to the feature section for improved visual representation.
2) Ensured proper alignment and spacing for a polished appearance.
3) All features are now visually highlighted with their respective icons.

--- a/index.html
+++ b/index.html
@@ -32,5 +32,37 @@
         <a class="btn btn-ghost" href="#">Show me more</a>
       </div>
     </header>
+    <section class="section-features"> 
+            <div class="row">
+              <h2>Get food fast &mdash; Not fast food</h2>
+                <p class="long-copy">
+                     Hello, we'"Experience the future of convenient dining with Omnifood. Our service delivers fresh, wholesome meals to your doorstep in record time, ensuring you enjoy quality cuisine without the wait.
+                </p>           
+            </div>
+            <div class="row">
+              <div class="col span_1_of_4 box">
+                <ion-icon class="icon-big" name="infinite-outline"></ion-icon>
+                <h3>Up to 365 days/year</h3>
+                <p>Experience the future of convenient dining with Omnifood, delivering fresh, wholesome meals to your doorstep up to 365 days a year.Our service ensures you enjoy quality cuisine without the wait</p>
+              </div>
+              <div class="col span_1_of_4 box">
+                <ion-icon class="icon-big" name="stopwatch-outline"></ion-icon>
+                <h3>Ready in 20 minutes</h3>
+                <p>Discover the convenience of Omnifood's unique dining service, where we provide fresh, wholesome meals delivered to your doorstep up to 365 days a year.You can enjoy quality cuisine without the wait, as your order is ready in just 20 minutes.</p>
+              </div>
+              <div class="col span_1_of_4 box">
+                <ion-icon class="icon-big" name="beer-outline"></ion-icon>
+                <h3>100% organic</h3>
+                <p>Indulge in 100% organic culinary delights with Omnifood. We're dedicated to serving you exclusively organic dishes, ensuring you enjoy the purest and freshest ingredients in every bite.</p>
+              </div>
+              <div class="col span_1_of_4 box">
+                <ion-icon class="icon-big" name="cart-outline"></ion-icon>
+                <h3>Order anything</h3>
+                <p>Choose with complete freedom at Omnifood. You have the flexibility to order anything you desire, whether it's a healthy salad, a hearty meal, or a sweet treat. Your cravings, your way</p>
+              </div>
+            </div>
+    </section>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
