--- a/index.html
+++ b/index.html
@@ -62,6 +62,54 @@
               </div>
             </div>
     </section>
+    <section class="section-meals">
+     
+            <ul class="meals-showcase">
+                 
+              <li>
+                  <figure class="meal-photo">
+                      <img src="resources/images/1.jpg" alt="food-image">
+                   </figure> 
+              </li>
+              <li>
+                 <figure class="meal-photo">
+                      <img src="resources/images/2.jpg" alt="food-image">
+                 </figure> 
+               </li>
+              <li>
+                 <figure class="meal-photo">
+                     <img src="resources/images/3.jpg" alt="food-image">
+                 </figure> 
+               </li>
+              <li>
+                 <figure class="meal-photo">
+                    <img src="resources/images/4.jpg" alt="food-image">
+                 </figure> 
+                </li>                                 
+            </ul>
+            <ul class="meals-showcase">
+             <li>
+              <figure class="meal-photo">
+               <img src="resources/images/5.jpg" alt="food-image">
+              </figure> 
+             </li>
+             <li>
+                 <figure class="meal-photo">
+                   <img src="resources/images/6.jpg" alt="food-image">
+                 </figure> 
+             </li>
+             <li>
+               <figure class="meal-photo">
+                 <img src="resources/images/7.jpg" alt="food-image">
+               </figure> 
+             </li>
+                 <li>
+               <figure class="meal-photo">
+                <img src="resources/images/8.jpg" alt="food-image">
+                </figure> 
+                </li>                                 
+            </ul>
+    </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
