Complete "How it works?" section with app links and explanatory steps
1) Incorporated phone and link images representing the app availability on the Play Store and App Store.
2) Declared clear and concise steps illustrating how users can navigate and make the most of our services.
3) Ensured proper formatting and alignment for an organized presentation.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
     <section class="section-meals">
      
-            <ul class="meals-showcase">
+            <ul class="meals-showcase clearfix">
                  
               <li>
                   <figure class="meal-photo">
@@ -87,7 +87,7 @@
                  </figure> 
                 </li>                                 
             </ul>
-            <ul class="meals-showcase">
+            <ul class="meals-showcase clearfix">
              <li>
               <figure class="meal-photo">
                <img src="resources/images/5.jpg" alt="food-image">
@@ -109,6 +109,32 @@
                 </figure> 
                 </li>                                 
             </ul>
+    </section>
+    <section class="section-steps">
+    <div class="row">
+      <h2>How it works ? &mdash; Simple as 1,2,3</h2>
+    </div>  
+    <div class="row">
+      <div class="col span_1_of_2" steps-box>
+        <img src="resources/images/smart-phone.jpg" alt="phone-image" class="app-screen">
+      </div>
+      <div class="col span_1_of_2" steps-box>
+        <div class="works-step">
+          <div>1</div>
+          <p>Choose plan that fits best for your need and Sign-up today</p>
+        </div>
+        <div class="works-step">
+          <div>2</div>
+          <p>Pay for the plan and download the app</p>
+        </div>
+        <div class="works-step">
+          <div>3</div>
+          <p>You are done, Start Ordering!</p>
+        </div>
+        <a href="#" class="btn-app"><img src="resources/images/app-store.png" alt="app-store"></a>
+        <a href="#" class="btn-app"><img src="resources/images/play-store.png" alt="play-store"></a>
+      </div>
+    </div>
     </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
