Structure for the Cities Feature Added.
1) Structure for the Cities Section is built and later Styling will be added.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <!--=============== Header Section ==========-->
+    <!--============================================= Header Section ==========-->
     <header>
       <nav>
         <div class="row">
@@ -32,6 +32,8 @@
         <a class="btn btn-ghost" href="#">Show me more</a>
       </div>
     </header>
+
+    <!-- ============================================ Feature Section ========== -->
     <section class="section-features"> 
             <div class="row">
               <h2>Get food fast &mdash; Not fast food</h2>
@@ -62,6 +64,8 @@
               </div>
             </div>
     </section>
+
+    <!-- ================================================ Meals Showcase Section ========= -->
     <section class="section-meals">
      
             <ul class="meals-showcase clearfix">
@@ -110,6 +114,8 @@
                 </li>                                 
             </ul>
     </section>
+
+    <!-- =============================================== How it works Section ? =========== -->
     <section class="section-steps">
     <div class="row">
       <h2>How it works ? &mdash; Simple as 1,2,3</h2>
@@ -135,7 +141,68 @@
         <a href="#" class="btn-app"><img src="resources/images/play-store.png" alt="play-store"></a>
       </div>
     </div>
-    </section>
+  </section>
+ <!-- ==================================== Cities Section =============-->
+ <section class="section-cities">
+     <div class="row">
+      <h2>We're currently in these cities</h2>
+     </div>
+     <div class="row">
+      <div class="col span_1_of_4 box">
+        <img src="resources/images/Delhi.jpg" alt="New Delhi">
+        <h3>New Delhi</h3>
+        <div class="city-feature">
+          <ion-icon name="person-circle-outline"></ion-icon>1600+ Happy Eaters
+        </div>
+        <div class="city-feature">
+          <ion-icon name="star-sharp"></ion-icon>50+ Chefs
+        </div>
+        <div class="city-feature">
+          <ion-icon name="logo-twitter"></ion-icon></ion-icon>@healthybites
+        </div>
+      </div>
+      <div class="col span_1_of_4 box">
+        <img src="resources/images/Mumbai.jpg" alt="Mumbai">
+        <h3>New Delhi</h3>
+        <div class="city-feature">
+          <ion-icon name="person-circle-outline"></ion-icon>2000+ Happy Eaters
+        </div>
+        <div class="city-feature">
+          <ion-icon name="star-sharp"></ion-icon>60+ Chefs
+        </div>
+        <div class="city-feature">
+          <ion-icon name="logo-twitter"></ion-icon></ion-icon>@healthybites
+        </div>
+      </div>
+      <div class="col span_1_of_4 box">
+        <img src="resources/images/Chennai.jpg" alt="Chennai">
+        <h3>New Delhi</h3>
+        <div class="city-feature">
+          <ion-icon name="person-circle-outline"></ion-icon>1500+ Happy Eaters
+        </div>
+        <div class="city-feature">
+          <ion-icon name="star-sharp"></ion-icon>30+ Chefs
+        </div>
+        <div class="city-feature">
+          <ion-icon name="logo-twitter"></ion-icon></ion-icon>@healthybites
+        </div>
+      </div>
+      <div class="col span_1_of_4 box">
+        <img src="resources/images/Kolkata.jpg" alt="Kolkata">
+        <h3>New Delhi</h3>
+        <div class="city-feature">
+          <ion-icon name="person-circle-outline"></ion-icon>1800+ Happy Eaters
+        </div>
+        <div class="city-feature">
+          <ion-icon name="star-sharp"></ion-icon>40+ Chefs
+        </div>
+        <div class="city-feature">
+          <ion-icon name="logo-twitter"></ion-icon></ion-icon>@healthybites
+        </div>
+      </div>
+     </div>
+ </section>
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
