Finish Cities Section with Images and Styling
1) Added visually appealing images showcasing the featured cities.
2) Applied consistent styling for a polished and cohesive look.
3) Ensured proper alignment and spacing to enhance the visual presentation.

--- a/index.html
+++ b/index.html
@@ -152,52 +152,52 @@
         <img src="resources/images/Delhi.jpg" alt="New Delhi">
         <h3>New Delhi</h3>
         <div class="city-feature">
-          <ion-icon name="person-circle-outline"></ion-icon>1600+ Happy Eaters
+          <ion-icon class="icon-small" name="person-circle-outline"></ion-icon>1600+ Happy Eaters
         </div>
         <div class="city-feature">
-          <ion-icon name="star-sharp"></ion-icon>50+ Chefs
+          <ion-icon class="icon-small" name="star-sharp"></ion-icon>50+ Chefs
         </div>
         <div class="city-feature">
-          <ion-icon name="logo-twitter"></ion-icon></ion-icon>@healthybites
+          <ion-icon class="icon-small" name="logo-twitter"></ion-icon></ion-icon><a href="#">@healthybites_dl</a>
         </div>
       </div>
       <div class="col span_1_of_4 box">
         <img src="resources/images/Mumbai.jpg" alt="Mumbai">
-        <h3>New Delhi</h3>
+        <h3>Mumbai</h3>
         <div class="city-feature">
-          <ion-icon name="person-circle-outline"></ion-icon>2000+ Happy Eaters
+          <ion-icon class="icon-small" name="person-circle-outline"></ion-icon>2000+ Happy Eaters
         </div>
         <div class="city-feature">
-          <ion-icon name="star-sharp"></ion-icon>60+ Chefs
+          <ion-icon class="icon-small" name="star-sharp"></ion-icon>60+ Chefs
         </div>
         <div class="city-feature">
-          <ion-icon name="logo-twitter"></ion-icon></ion-icon>@healthybites
+          <ion-icon class="icon-small" name="logo-twitter"></ion-icon></ion-icon><a href="#">@healthybites_mu</a>
         </div>
       </div>
       <div class="col span_1_of_4 box">
         <img src="resources/images/Chennai.jpg" alt="Chennai">
-        <h3>New Delhi</h3>
+        <h3>Chennai</h3>
         <div class="city-feature">
-          <ion-icon name="person-circle-outline"></ion-icon>1500+ Happy Eaters
+          <ion-icon class="icon-small" name="person-circle-outline"></ion-icon>1500+ Happy Eaters
         </div>
         <div class="city-feature">
-          <ion-icon name="star-sharp"></ion-icon>30+ Chefs
+          <ion-icon class="icon-small" name="star-sharp"></ion-icon>30+ Chefs
         </div>
         <div class="city-feature">
-          <ion-icon name="logo-twitter"></ion-icon></ion-icon>@healthybites
+          <ion-icon class="icon-small" name="logo-twitter"></ion-icon></ion-icon><a href="#">@healthybites_ch</a>
         </div>
       </div>
       <div class="col span_1_of_4 box">
         <img src="resources/images/Kolkata.jpg" alt="Kolkata">
-        <h3>New Delhi</h3>
+        <h3>Kolkata</h3>
         <div class="city-feature">
-          <ion-icon name="person-circle-outline"></ion-icon>1800+ Happy Eaters
+          <ion-icon class="icon-small" name="person-circle-outline"></ion-icon>1800+ Happy Eaters
         </div>
         <div class="city-feature">
-          <ion-icon name="star-sharp"></ion-icon>40+ Chefs
+          <ion-icon class="icon-small" name="star-sharp"></ion-icon>40+ Chefs
         </div>
         <div class="city-feature">
-          <ion-icon name="logo-twitter"></ion-icon></ion-icon>@healthybites
+          <ion-icon class="icon-small" name="logo-twitter"></ion-icon></ion-icon><a href="#">@healthybites_kl</a>
         </div>
       </div>
      </div>
