--- a/index.html
+++ b/index.html
@@ -202,7 +202,15 @@
       </div>
      </div>
  </section>
-
+<!-- ============================================= Testimonial ========================= -->
+<section class="section-testimonials">
+  <div class="row">
+    <h2>Our customer can't live without us</h2>
+  </div>
+  <div class="row">
+    <div class="col span_1_of_3"></div>
+  </div>
+</section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
