Finish Customer Testimonials Section with Reviews and Styling
1) Added customer testimonials with respective names and profile pictures.
2) Implemented a stunning background to enhance visual appeal.
3) Applied consistent and polished styling for an engaging presentation.

--- a/index.html
+++ b/index.html
@@ -208,7 +208,33 @@
     <h2>Our customer can't live without us</h2>
   </div>
   <div class="row">
-    <div class="col span_1_of_3"></div>
+    <div class="col span_1_of_3">
+      <blockquote>
+        "Healthy Bites lives up to its name! The website is a treasure trove of nutritious options. From the vibrant Cities section to the 'How it works?' guide, it's clear that every detail is geared towards promoting a healthier lifestyle. My go-to for guilt-free indulgence!"
+        <cite>
+          <img src="resources/images/Cust1.svg" alt="cust-1">
+          Aman Adhikari
+        </cite>
+      </blockquote>
+    </div>
+    <div class="col span_1_of_3">
+      <blockquote>
+        "Navigating Healthy Bites is a breeze. The feature section is not only informative but also visually appealing. The commitment to 100% organic meals is evident throughout the site, making it my top choice for a quick and health-conscious bite. Well done!"
+        <cite>
+          <img src="resources/images/Cust2.svg" alt="cust-1">
+          Emily Turner
+        </cite>
+      </blockquote>
+    </div>
+    <div class="col span_1_of_3">
+      <blockquote>
+        "Healthy Bites is a game-changer! The favorite meal section and its stunning images make healthy eating a joy. The website design is clean and inviting, and the 'Get Food Fast, Not Fast Food' promise is a testament to its dedication to both speed and nutrition. Highly recommended for those seeking a balance between health and taste!"
+        <cite>
+          <img src="resources/images/Cust4.svg" alt="cust-1">
+          Ishwar Singh Bhandari
+        </cite>
+      </blockquote>
+    </div>
   </div>
 </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
