--- a/index.html
+++ b/index.html
@@ -237,6 +237,76 @@
     </div>
   </div>
 </section>
+<!--=============================== Plan Section ========-->
+<section class="section-plans">
+  <div class="row">
+    <h2>Start eating healthy today</h2>
+  </div>
+  <div class="row">
+    <div class="col span_1_of_3">
+      <div class="plan-box">
+        <div>
+          <h3>Premium</h3>
+          <p class="plan-price">Rs.149 <span>/ month</span></p>
+          <p class="plan-price-meal">That's only 37.25Rs per meal</p>
+        </div>
+        <div>
+          <ul>
+            <li><ion-icon  class="icon-small" name="checkmark-outline"></ion-icon>1 meal everyday</li>
+            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Order 24 X 7 </li>
+            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Access to newest creation</li>
+            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Free delivery</li>
+          </ul>
+        </div>
+        <div>
+          <a href="#" class="btn btn-full">Sign-up</a>
+        </div>
+      </div>
+    </div>
+    <div class="col span_1_of_3">
+      <div class="plan-box">
+        <div>
+          <h3>Pro</h3>
+          <p class="plan-price">Rs.99 <span>/ month </span></p>
+          <p class="plan-price-meal">That's only 43.25Rs per meal</p>
+        </div>
+        <div>
+          <ul>
+            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>1 meal every week</li>
+            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Order 24 X 7 </li>
+            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Access to newest creation</li>
+            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Free delivery</li>
+          </ul>
+        </div>
+        <div>
+          <a href="#" class="btn btn-ghost">Sign-up</a>
+        </div>
+      </div>
+    </div>
+    <div class="col span_1_of_3">
+      <div class="plan-box">
+        <div>
+          <h3>Starter</h3>
+          <p class="plan-price">Rs.49 <span>/ month</span></p>
+          <p class="plan-price-meal"> &nbsp; </p>
+        </div>
+        <div>
+          <ul>
+            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>1 meal every month</li>
+            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Order 24 X 7 </li>
+            <li><ion-icon class="icon-small" name="close-outline"></ion-icon> </li>
+            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Free delivery</li>
+          </ul>
+        </div>
+        <div>
+          <a href="#" class="btn btn-ghost">Sign-up</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
