--- a/index.html
+++ b/index.html
@@ -378,7 +378,31 @@
     </form>
   </div>
 </section>
-
+<!-- =============================Footer===================== -->
+<footer>
+  <div class="row">
+     <div class="col span_1_of_2">
+         <ul class="footer-nav">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">IOS App</a></li>
+          <li><a href="#">Android App</a></li>
+         </ul>
+     </div>
+     <div class="col span_1_of_2">
+      <ul class="social-links">
+        <li><ion-icon class="fb" name="logo-facebook"></ion-icon></li>
+        <li><ion-icon class="twitter" name="logo-twitter"></ion-icon></li>
+        <li><ion-icon class="google" name="logo-google"></ion-icon></li>
+        <li><ion-icon class="insta" name="logo-instagram"></ion-icon></li>
+      </ul>
+     </div>
+    </div>
+    <div class="row">
+      <p>Copyright &copy; 2023 by HealthyBite. All rights reserved</p>
+    </div>
+</footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
