Achieve Responsive Design Milestone
1) Implemented responsive design across various breakpoints for enhanced user experience.
2) Ensured optimal display on devices of different sizes, from desktops to tablets and mobiles.
3) Refactored CSS styles to adapt gracefully to varying screen dimensions.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width-device-width,initial-scale=1.0">
     <title>HealthyBites</title>
     <link rel="stylesheet" href="vendors/css/normalize.css" />
     <link rel="stylesheet" href="resources/css/style.css" />
     <link rel="stylesheet" href="vendors/css/grid.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="vendors/css/queries.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
@@ -121,10 +123,10 @@
       <h2>How it works ? &mdash; Simple as 1,2,3</h2>
     </div>  
     <div class="row">
-      <div class="col span_1_of_2" steps-box>
+      <div class="col span_1_of_2 steps-box">
         <img src="resources/images/smart-phone.jpg" alt="phone-image" class="app-screen">
       </div>
-      <div class="col span_1_of_2" steps-box>
+      <div class="col span_1_of_2 steps-box">
         <div class="works-step">
           <div>1</div>
           <p>Choose plan that fits best for your need and Sign-up today</p>
